<resources>
    <string name="app_label">Messages</string>
    <string name="new_message">Messages</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_cp_messages">Configuration messages</string>
    <string name="menu_call">Call</string>
    <string name="menu_photoring_call">Photo ring</string>
    <string name="menu_ip_call">IP Call</string>
    <string name="menu_delete_all">Delete conversations</string>
    <string name="refreshing">Refreshing...</string>
    <string name="has_draft">Draft</string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_message_details">View message details</string>
    <string name="sent_on">%s</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="inline_subject">Subject: %s</string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Invalid DRM rights</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="copy_message_to_sim">Copy to SIM</string>
    <string name="copy_to_sim_not_available">Unable to save as single message to SIM card. Message too large</string>
    <string name="copy_to_sim_number_format_err">Unable to save to SIM card. Invalid address</string>
    <string name="copy_to_sim_not_available_sim_full">Unable to save to SIM card. Not enough SIM card memory</string>
    <string name="message_options">Message options</string>
    <string name="done">Done</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Enter subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to compose message</string>
    <string name="image_too_large">Picture too large</string>
    <string name="compressing">Picture too large. Compressing...</string>
    <string name="exceed_message_size_limitation">Message size limit reached</string>
    <string name="message_too_big_for_video">Unable to attach video. Message too large</string>
    <string name="failed_to_resize_image">Picture not resized</string>
    <string name="resize_image_error_information">Unable to send. Image still too large</string>
    <string name="forward_prefix">Fwd:</string>
    <string name="reply_prefix">RE:</string>
    <string name="discard_message">Discard message</string>
    <string name="discard_message_reason">No recipients have been selected. This message will be discarded.</string>
    <string name="discard_button">Discard</string>
    <string name="invalid_destination">Invalid address entered</string>
    <string name="invalid_recipient">Invalid recipient</string>
    <string name="invalid_recipient_message">"Unable to add this recipient. The recipient's number is not valid."</string>
    <string name="cannot_send_message">Unable to send this message</string>
    <string name="cannot_send_message_reason">Invalid recipients entered</string>
    <string name="cannot_forward_drm_obj">Unable to forward DRM object included in message</string>
    <string name="converting_to_picture_message">Converting to multimedia message...</string>
    <string name="converting_to_text_message">Converting to text message...</string>
    <string name="cannot_save_message">Unable to save message</string>
    <string name="message_saved_as_draft">Message saved as draft</string>
    <string name="recipient_max_limit">Maximum number of recipients is %d</string>
    <string name="too_many_attachments">Maximum number of attachments (%1$s) exceeded. Only first %2$s will be added</string>
    <string name="too_many_attachments_no_import">Maximum number of attachments (%s) exceeded</string>
    <string name="preview">Preview</string>
    <string name="preview_slideshow">Preview</string>
    <string name="duration_sec">Duration (%s sec)</string>
    <string name="layout_top">Layout (top)</string>
    <string name="layout_bottom">Layout (bottom)</string>
    <string name="secs">secs</string>
    <string name="menu_view_contact">View contact</string>
    <string name="menu_add_to_contacts">Add to Contacts</string>
    <string name="hidden_sender_address">Hidden sender address</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="try_to_send">Try to send</string>
    <string name="preferences_title">Settings</string>
    <string name="restore_default">Restore default settings</string>
    <string name="restore_default_confirm">Message settings will be restored. Continue?</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">Multimedia message (MMS) settings</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_sms_general_settings_title">General settings</string>
    <string name="pref_mms_change_over_alarm_title">MMS alert</string>
    <string name="pref_mms_change_over_alarm">Receive alerts when the mode changes to a multimedia message.</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card.</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send.</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send.</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send.</string>
    <string name="pref_summary_auto_delete">Delete old messages when the maximum number of messages is reached.</string>
    <string name="pref_summary_delete_limit">%d messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Make sounds and show icon in status bar when you receive messages</string>
    <string name="pref_title_notification_ringtone">Notification sound</string>
    <string name="pref_title_preview_message_notification">Preview message</string>
    <string name="pref_summary_preview_message_notification">Show a preview of received messages on the status bar and lock screen</string>
    <string name="preview_message_notification">New message arrived</string>
    <string name="default_notification_sound">Default notification sound</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages.</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming.</string>
    <string name="cb_allowed_channel">%d subscription available</string>
    <string name="confirm_dialog_title">Delete</string>
    <string name="confirm_delete_all_dialog_title">Delete all</string>
    <string name="confirm_delete_message">This message will be deleted.</string>
    <string name="confirm_delete_locked_message">Delete this protected message?</string>
    <string name="confirm_delete_all_channels">All channels will be deleted</string>
    <string name="confirm_delete_channel">Channel will be deleted</string>
    <string name="delete">Delete</string>
    <string name="message_count_zero">No messages</string>
    <string name="favorite_count_zero">No favourites</string>
    <string name="menu_contacts">Contacts</string>
    <string name="pref_title_push_message_enabled">Push messages</string>
    <string name="search_map">Search</string>
    <string name="phone_book_button_description">Add from contacts</string>
    <string name="pref_callback_title">Callback number</string>
    <string name="display_settings_title">Display</string>
    <string name="pref_title_settings_cmas">Emergency Alerts</string>
    <string name="pref_delay_settings_title">Delay message sending</string>
    <string name="spam_msg_match_criteria_menu">Match criteria</string>
    <string name="location_option_menu_drop_pin">Drop pin</string>
    <string name="refresh_location">Refresh</string>
    <string name="my_location_option">My Location</string>
    <string name="favorite_location_option">Favorite location</string>
    <string name="recent_location_option">Recent location</string>
    <string name="get_contact_location">Get contact address</string>
    <string name="empty_template_string">Tap to compose a message.</string>
    <string name="empty_template_string_guide">Tap the compose message icon to compose a message.</string>
    <string name="sender_info_setting">Add sender information when forwarding</string>
    <string name="sender_info_title">Sender information</string>
    <string name="change_order">Change order</string>
    <string name="pref_summary_sms_restore">Restore saved messages to your inbox</string>
    <string name="pref_title_sms_restore">Restore messages</string>
    <string name="enter_number">Enter number</string>
    <string name="add_favorite">Add contact</string>
    <string name="font_size">Font size</string>
    <string name="favorites">Favourites</string>
    <string name="geo_coded_media_option_vzw">Geo-coded media</string>
    <string name="priority_sender">Priority senders</string>
    <string name="recommended">Recommended</string>
    <string name="inbox_for_tts">Inbox</string>
    <string name="pref_safemode_settings">Safe mode</string>
    <string name="pref_sms_setting">Text messages</string>
    <string name="pref_mms_setting">Multimedia messages</string>
    <string name="pref_signature_settings">Signature</string>
    <string name="pref_title_sms_disabled">Default messaging app</string>
    <string name="pref_summary_sms_disabled">Tap here to set %s as your default messaging application.</string>
    <string name="pref_title_sms_enabled">Default messaging app</string>
    <string name="pref_summary_sms_enabled">Set your default messaging application.</string>
    <string name="set_title_quick_response">Quick responses</string>
    <string name="set_title_cell_broadcast">Cell broadcast</string>
    <string name="set_title_spam_filter">Spam filter</string>
    <string name="messages_inbox">Inbox</string>
    <string name="no_recommendations">No recommendations</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_faces">Faces</string>
    <string name="tab_objects">Objects</string>
    <string name="tab_nature">Nature</string>
    <string name="tab_places">Places</string>
    <string name="tab_symbols">Symbols</string>
</resources>