<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/im_emoticons_layout" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/im_emoticons_tab_container" android:background="@drawable/mms_emotion_top_bg" android:paddingLeft="13.0dip" android:paddingRight="17.0dip" android:focusable="false" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_alignParentTop="true">
        <ImageView android:id="@id/emotion_tab_button_favorite" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/selector_message_emoji_tab_favorite" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/tab_recent" />
        <ImageView android:id="@id/emotion_tab_button_smiley" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/selector_message_emoji_tab_smiley" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/tab_faces" />
        <ImageView android:id="@id/emotion_tab_button_weather" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/selector_message_emoji_tab_crown" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/tab_objects" />
        <ImageView android:id="@id/emotion_tab_button_food" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/selector_message_emoji_tab_dawg" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/tab_nature" />
        <ImageView android:id="@id/emotion_tab_button_bldgs" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/selector_message_emoji_tab_bldgs" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/tab_places" />
        <ImageView android:id="@id/emotion_tab_button_office" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/selector_message_emoji_tab_star" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/tab_symbols" />
        <ImageView android:id="@id/emotion_tab_button_delete" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/selector_message_emoji_tab_delete" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/delete" />
    </LinearLayout>
    <android.support.v4.view.ViewPager android:id="@id/im_emoticons_viewpager" android:background="@drawable/message_bottom_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/im_emoticons_tab_container" />
    <View android:background="#ffec931f" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/im_emoticons_viewpager" />
</RelativeLayout>